--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -80,7 +80,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2> L'agence La Panthère est une agence de web design qui aide<br> 
+				les entreprises a devenir attractives et visibles sur internet.  </h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -120,8 +121,11 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<h2>"L'agence La Panthère est une excellente agence web.Les<br>
+				 web designers ont réussi à capturer l'essence de notre entreprise<br>
+				et à l'intégrer à notre site. Cela nous a aidé a <br> 
+			    doubler nos ventes en ligne à Lyon".<br>
+				Maxime GUIBARD, PDG de A vos Fourchettes</h2>
 			</div>
 		</div>
 	</div>
@@ -150,7 +154,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h2>Nous travaillons avec beaucoup de clients.<br>
+				    Voici nos réalisations.</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -175,7 +180,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="photo d'appareils photos avec accessoires"/></a>
 				<h2 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h2>
@@ -184,7 +189,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="photo d'un ordinateur ssur une table" /></a>
 				<h2 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h2>
