--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -67,7 +67,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="image du logo d'une panthère" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
+					Agence La Panthère, agence de webdesign basée à Lyon.
 				</h1>
 			</div>
 		</div>
