--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="image du logo d'une panthère" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère, agence de webdesign basée à Lyon.
+					Agence La Panthère
 				</h1>
 			</div>
 		</div>
